[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/naive_behavior_tree/remote_debug/remote_debug_view/NBTGraphNode.gd" type="Script" id=1]
[ext_resource path="res://addons/naive_behavior_tree/remote_debug/remote_debug_view/ParameterContainer.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.0588235, 0.776471, 0.886275, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.992157, 0.0862745, 0.0862745, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.886275, 0.615686, 0.0666667, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.219608, 0.937255, 0.0431373, 1 )
border_blend = true

[sub_resource type="Theme" id=5]
GraphNode/styles/cancelled = SubResource( 1 )
GraphNode/styles/failed = SubResource( 2 )
GraphNode/styles/running = SubResource( 3 )
GraphNode/styles/status_changed = SubResource( 6 )
GraphNode/styles/succeeded = SubResource( 4 )

[node name="NBTGraphNode" type="GraphNode"]
margin_right = 192.0
margin_bottom = 88.0
size_flags_horizontal = 5
size_flags_vertical = 5
theme = SubResource( 5 )
custom_constants/separation = 5
title = "sdsd"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 0.4, 0.2, 0.6, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.25, 0.41, 0.88, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 0.85, 0.65, 0.13, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 78.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Parent"
valign = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
margin_left = 82.0
margin_right = 160.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Children"
align = 2
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 16.0
margin_top = 43.0
margin_right = 176.0
margin_bottom = 57.0
text = "Guard"
align = 2
valign = 1

[node name="ScriptButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 62.0
margin_right = 176.0
margin_bottom = 82.0
text = "Click to open the Script"

[node name="ParameterContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 87.0
margin_right = 176.0
margin_bottom = 87.0
custom_constants/separation = 0
script = ExtResource( 2 )

[connection signal="pressed" from="ScriptButton" to="." method="_on_ScriptButton_pressed"]
